# forvanced

./: .gitignore  Cargo.toml  README.md  package.json
apps/builder/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/builder/e2e/: action-binding.spec.ts  app.spec.ts
apps/builder/playwright-report/: index.html
apps/builder/src/: App.tsx  main.tsx
apps/builder/src-tauri/: Cargo.toml  tauri.conf.json
apps/builder/src-tauri/capabilities/: default.json
apps/builder/src-tauri/icons/: icon.icns
apps/builder/src-tauri/src/: lib.rs  main.rs  state.rs
apps/builder/src-tauri/src/commands/: build.rs  executor.rs  mod.rs  project.rs
apps/builder/src/components/common/: CommandPalette.tsx  ErrorAlert.tsx  FocusTrap.tsx  HotkeysHelp.tsx  Icons.tsx  SkipLinks.tsx
apps/builder/src/components/designer/: ComponentPalette.tsx  DesignCanvas.tsx  LayersPanel.tsx  PropertyPanel.tsx  UIDesigner.tsx  UIPreview.tsx
apps/builder/src/components/layout/: Header.tsx  Sidebar.tsx
apps/builder/src/components/process/: ProcessList.tsx
apps/builder/src/components/project/: ProjectPanel.tsx
apps/builder/src/components/script/: CanvasMinimap.tsx  NodeCanvas.tsx  NodeCommander.tsx  NodeInspector.tsx  NodePalette.tsx  QuickNodeMenu.tsx  ScriptEditor.tsx  index.ts
apps/builder/src/components/settings/: SettingsModal.tsx
apps/builder/src/components/testing/: TestPanel.tsx  index.ts
apps/builder/src/lib/: frida-agent.ts  script-compiler.ts  script-executor.ts  tauri.ts
apps/builder/src/stores/: designer.ts  error.ts  hotkeys.ts  project.ts  script.ts  sidebar.ts  target.ts  ui.ts
apps/builder/src/styles/: globals.css
apps/runtime/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/runtime/src/: App.tsx  index.tsx
apps/runtime/src-tauri/: Cargo.toml  tauri.conf.json
apps/runtime/src-tauri/capabilities/: default.json
apps/runtime/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/runtime/src/components/: ProjectUI.tsx
apps/runtime/src/styles/: globals.css
crates/forvanced-adapters/: Cargo.toml
crates/forvanced-adapters/src/: error.rs  lib.rs  local_pc.rs  registry.rs  remote.rs  traits.rs  usb.rs
crates/forvanced-build/: Cargo.toml
crates/forvanced-build/src/: builder.rs  codegen.rs  error.rs  lib.rs  template.rs
crates/forvanced-core/: Cargo.toml
crates/forvanced-core/src/: error.rs  lib.rs  project.rs  script.rs
crates/forvanced-executor/: Cargo.toml
crates/forvanced-executor/examples/: test_script.rs
crates/forvanced-executor/src/: context.rs  error.rs  executor.rs  lib.rs  rpc.rs  script.rs  value.rs
crates/forvanced-executor/src/nodes/: arrays.rs  constants.rs  device.rs  flow.rs  math.rs  mod.rs  objects.rs  output.rs  strings.rs  ui.rs  variables.rs
crates/forvanced-executor/tests/: all_nodes_test.rs
crates/forvanced-frida/: Cargo.toml
crates/forvanced-frida/examples/: test_attach.rs
crates/forvanced-frida/src/: error.rs  lib.rs  manager.rs  mock.rs  process.rs  session.rs
