[workspace]
resolver = "2"
members = [
    "apps/builder/src-tauri",
    "crates/forvanced-core",
    "crates/forvanced-frida",
    "crates/forvanced-build",
    "crates/forvanced-executor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Forvanced Team"]
license = "MIT"
repository = "https://github.com/forvanced/forvanced"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Note: frida crate is managed directly in forvanced-frida crate (optional dependency)

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
