[package]
name = "forvanced-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "forvanced_builder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

dirs = "5"
chrono = { workspace = true }

# Internal crates
forvanced-core = { path = "../../../crates/forvanced-core" }
forvanced-frida = { path = "../../../crates/forvanced-frida" }
forvanced-adapters = { path = "../../../crates/forvanced-adapters" }
forvanced-build = { path = "../../../crates/forvanced-build" }
