[package]
name = "forvanced-builder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["mock"]
mock = ["forvanced-frida/mock"]
# Use: cargo run --no-default-features --features real
real = ["forvanced-frida/real"]

[lib]
name = "forvanced_builder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-os = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

dirs = "5"
chrono = { workspace = true }

# Internal crates
forvanced-core = { path = "../../../crates/forvanced-core" }
forvanced-frida = { path = "../../../crates/forvanced-frida", default-features = false }
forvanced-build = { path = "../../../crates/forvanced-build" }
forvanced-executor = { path = "../../../crates/forvanced-executor" }
