[package]
name = "forvanced-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["mock"]
mock = ["forvanced-frida/mock"]
# Use: cargo run --no-default-features --features real
real = ["forvanced-frida/real"]

[lib]
name = "forvanced_runtime_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }

# Internal crates
forvanced-core = { path = "../../../crates/forvanced-core" }
forvanced-frida = { path = "../../../crates/forvanced-frida", default-features = false }
forvanced-executor = { path = "../../../crates/forvanced-executor" }

[dev-dependencies]
forvanced-build = { path = "../../../crates/forvanced-build" }
tempfile = "3.24"
